Fix contrast issues with aquaTabBar

--- a/styles/aqua-tab-bar.less
+++ b/styles/aqua-tab-bar.less
@@ -3,14 +3,35 @@
 
 @tab-padding: 6px;
 
+.aqua-tab-bar-background() when (lightness(@syntax-background-color) > 50%) {
+  background: fade(@syntax-background-color, 5%);
+}
+
+.aqua-tab-bar-background() when (lightness(@syntax-background-color) <= 50%) {
+  background: fade(@syntax-background-color, 50%);
+}
+
 /*
  * aquaTabBar.enable - Apple-like tab bar
  *
  * To do:
  *   - fix light-on-dark (and dark-on-light) themes
+ *   - fix separators
  */
 
 .atom-ui-tweaks--other--enable-staging-tweaks {
+  &.theme-one-dark-ui.theme-one-dark-ui.theme-one-dark-ui {
+    .tab-bar .tab:not(.active) {
+      .aqua-tab-bar-background();
+    }
+  }
+
+  &.theme-one-light-ui.theme-one-light-ui.theme-one-light-ui {
+    .tab-bar .tab:not(.active) {
+        background: fade(white, 50%);
+    }
+  }
+
   &.theme-one-dark-ui.theme-one-dark-ui.theme-one-dark-ui,
   &.theme-one-light-ui.theme-one-light-ui.theme-one-light-ui {
     // This doesn't look right
@@ -33,25 +54,25 @@
         box-shadow: none;
       }
 
-      & .tab,
-      & .tab:last-child {
+      .tab {
         cursor: pointer;
-        box-shadow: inset 0 1px 0 darken(@syntax-background-color, 1%),
-          inset 0 -1px 0 @tab-border-color;
       }
 
-      & .tab.active {
-        background: lighten(@syntax-background-color, 3%);
-        box-shadow: inset 0 1px 0 lighten(@syntax-background-color, 5%),
-          inset 0 -1px 0 @tab-border-color;
+      .tab.active {
         font-weight: bold;
+        background: lighten(@syntax-background-color, 3%);
+        color: darken(@syntax-text-color, 10%);
+        box-shadow: inset 0 1px 0 lighten(@syntax-background-color, 8%),
+          inset 0 -1px 0 @tab-border-color;
       }
 
-      & .tab:not(.active) {
-        background: fade(@syntax-background-color, 50%);
+      .tab,
+      .tab:last-child {
+        box-shadow: inset 0 1px 0 lighten(@tab-border-color, 5%),
+          inset 0 -1px 0 @tab-border-color;
       }
 
-      & .tab:last-child {
+      .tab:last-child {
         margin-right: 0;
         border-top-right-radius: 4px !important;
         border-bottom-right-radius: 4px !important;
